# openexif-2.1.4

./: CMakeLists.txt  README.md  configure  configure.in  headers
cmake/: OpenexifConfig.cmake.in
config-scripts/: ac_compile_warnings.m4  bootstrap  mkinstalldirs
doc/: Makefile.am  Makefile.in  doxygen_html.cfg
examples/: CMakeLists.txt  Makefile.am  Makefile.in
examples/AppSegDump/: AppSegDump.cpp  CMakeLists.txt  Makefile.am  Makefile.in
examples/CreateExif/: CMakeLists.txt  CreateExif.cpp  Makefile.am  Makefile.in
examples/ExifTagDump/: CMakeLists.txt  ExifTagDump.cpp  Makefile.am  Makefile.in
projects/MacOS/CodeWarrior/: OpenExif.mcp
projects/Win32/VC6.0/: BuildAllDynamic.dsw  BuildAllStatic.dsw  OpenExif.dsp  OpenExifi.dsp  test.dsp  testi.dsp
projects/Win32/VC7.0/: ExifTagDump.vcproj  OpenExif.sln  OpenExif.vcproj  test.vcproj
projects/Win32/VC9.0/: AppSegDump.vcproj  ExifTagDump.vcproj  OpenExif.sln  OpenExif.vcproj  OpenExifJpeg.vcproj  test.vcproj
src/: CMakeLists.txt
test/: GroundTrue.txt  Makefile.am  Makefile.in  test.cpp
